May 15th 2013, 1.0.0 Released

May 16th 2013, 1.0.1 Released
- remove extra data 
- remove old multifasta_to_otu matlab scripts
- minor documentation changes

May 20th 2013, 1.0.2 Released
- correted usage strings
- install manpages globally (to {PREFIX}/share/man/man1)
- added native gzip decoding for quikr and multifasta_to_otu

Current Development Branch
- Licensing files and documentation added
- Removed unused code from the NBC project
- Fixed a overflow bug in quikr_train