@@ -8,9 +8,10 @@ May 16th 2013, 1.0.1 Released
 May 20th 2013, 1.0.2 Released
 - correted usage strings
 - install manpages globally (to {PREFIX}/share/man/man1)
-- added native gzip decoding for quikr and multifasta_to_otu
 
 Current Development Branch
 - Licensing files and documentation added
 - Removed unused code from the NBC project
 - Fixed a overflow bug in quikr_train
+- added native gzip decoding for quikr and multifasta_to_otu
+- documentation fixes
